database back to life